<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_buscar"
        android:icon="@drawable/ic_buscar_white"
        android:title="@string/buscar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_adicionar_white"
        android:title="@string/adicionar"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_atualizar"
        android:icon="@drawable/ic_atualizar_white"
        android:title="@string/atualizar"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_config"
        android:title="@string/configurações"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sair"
        android:title="@string/sair"
        app:showAsAction="never"/>

</menu>
