<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Nome:" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="5dp"
        android:background="@drawable/round_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Endereço:"
        android:id="@+id/textViewEndereco" />

    <EditText
        android:id="@+id/editTextEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="5dp"
        android:background="@drawable/round_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sexo:"
        android:id="@+id/textViewSexo" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroupSexo">

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioButtonFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewDataNascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/data_nascimento" />

    <EditText
        android:id="@+id/editTextDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:padding="5dp"
        android:background="@drawable/round_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estado Civil"/>

    <RadioGroup
        android:id="@+id/EstadoCivil"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonCasado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Casado(a)"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioButtonSolteiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="solteiro(a)"
            android:checked="false" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxRegistroAtivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro Ativo"
        android:checked="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_alignTop="@+id/buttonSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_btn"/>

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/buttonVoltar"
            android:layout_toEndOf="@+id/buttonVoltar"
            android:background="@drawable/round_btn"/>

    </RelativeLayout>


</LinearLayout>